<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#65BFE5"
    tools:context=".DetailProfileActivity">


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="@dimen/_20dp"
        android:layout_height="@dimen/_20dp"
        android:src="@drawable/back"
        android:id="@+id/back"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_myprofilee"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sp"
        android:textColor="@android:color/black"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_2000dp"
        android:layout_height="@dimen/_150dp"
        android:src="@drawable/foto_profil"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_gravity="center"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4780dp"
        android:background="#FFFFFF"
        android:layout_marginTop="@dimen/_30dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/_nama"
                   android:layout_marginTop="@dimen/_40dp"
                   android:layout_marginStart="@dimen/_30dp"
                   android:textSize="@dimen/_20sp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/_ratih"
                   android:layout_marginTop="@dimen/_40dp"
                   android:layout_marginStart="@dimen/_30dp"
                   android:textSize="@dimen/_20sp"/>




           </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_lahir"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:textSize="@dimen/_20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_lahirBanjar"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_45dp"
                    android:textSize="@dimen/_20sp"/>





            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_alamat"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:textSize="@dimen/_20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_pucung"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:textSize="@dimen/_20sp"/>





            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_hobi"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:textSize="@dimen/_20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_membaca"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_35dp"
                    android:textSize="@dimen/_20sp"/>





            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_sekolah"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:textSize="@dimen/_20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_namaSekolah"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="11dp"
                    android:textSize="@dimen/_20sp"/>





            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_motto"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:textSize="@dimen/_20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_isiMotto"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_32dp"
                    android:textSize="@dimen/_20sp"/>





            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>