<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_420dp"
    android:layout_height="@dimen/_720"
    android:layout_margin="3dp"
    android:background="@drawable/bg_profillll"
    tools:context=".myprofile">


    <ImageView
        android:id="@+id/segitiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_450dp"
        android:contentDescription="@string/_foto"
        android:scaleType="fitXY"
        android:src="@drawable/segitiga" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:layout_marginTop="470dp"
            android:src="@drawable/foto_profil" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_550dp"
                android:fontFamily="@font/marqez_font"
                android:text="@string/_welcome"
                android:textColor="@android:color/white"
                android:textSize="65sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_myProfil"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sp" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_35dp"
                android:layout_marginStart="@dimen/_45dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/buttonshape"
                android:fontFamily="sans-serif-light"
                android:text="@string/_seemore"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>